#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.69])
AC_INIT([hello], [0.0.5], [ninglvfeihong@163.com])
AC_CONFIG_SRCDIR([src/main.c])
AC_CONFIG_HEADERS([config.h])

# Checks for programs.
AC_PROG_CC
AM_INIT_AUTOMAKE([-Wall -Werror foreign])
AC_CONFIG_FILES([
	Makefile
	head/Makefile
	src/Makefile
])
# Checks for libraries.
AM_PROG_AR
# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.
AC_PROG_RANLIB
AC_OUTPUT
